--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <title>Clover Bot</title>
-    <link rel="stylesheet" href="style.css" />
+    <!-- Link to your CSS file in the static folder -->
+    <link rel="stylesheet" href="static/styles.css" />
   </head>
   <body>
     <div class="header">
+      <!-- Link to your banner image in the static/buttons folder -->
       <img src="static/buttons/banner.png" alt="Robot Banner" />
     </div>
     <div class="grid-wrapper">
       <div class="grid-container">
+        <!-- Each button belongs to 2 classes: Grid-item and glowing-button -->
         <button id="BD" class="grid-item glowing-button">
           <img src="static/buttons/thumb_down.png" alt="Thumb Down (Bad)" />
         </button>
@@ -39,6 +42,7 @@
         </button>
       </div>
     </div>
+    <!-- Link to your JavaScript file -->
     <script src="script.js"></script>
   </body>
 </html>
