--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <title>Clover Bot</title>
-    <!-- Link to your CSS file in the static folder -->
+    <!-- Update the link to the static folder directly -->
     <link rel="stylesheet" href="static/styles.css" />
   </head>
   <body>
     <div class="header">
-      <!-- Link to your banner image in the static/buttons folder -->
+      <!-- Direct path to the static folder for the banner image -->
       <img src="static/buttons/banner.png" alt="Robot Banner" />
     </div>
     <div class="grid-wrapper">
@@ -42,7 +42,7 @@
         </button>
       </div>
     </div>
-    <!-- Link to your JavaScript file -->
-    <script src="script.js"></script>
+    <!-- Link js -->
+    <script src="static/script.js"></script>
   </body>
 </html>
