--- a/templates/index.html
+++ b/templates/index.html
@@ -8,41 +8,41 @@
   <body>
     <div class="header">
       <!-- Direct path to the static folder for the banner image -->
-      <img src="static/buttons/banner.png" alt="Robot Banner" />
+      <img src="/static/buttons/banner.png" alt="Robot Banner" />
     </div>
     <div class="grid-wrapper">
       <div class="grid-container">
         <!-- Each button belongs to 2 classes: Grid-item and glowing-button -->
         <button id="BD" class="grid-item glowing-button">
-          <img src="static/buttons/thumb_down.png" alt="Thumb Down (Bad)" />
+          <img src="/static/buttons/thumb_down.png" alt="Thumb Down (Bad)" />
         </button>
         <button id="M" class="grid-item glowing-button">
-          <img src="static/buttons/mask.png" alt="Mask" />
+          <img src="/static/buttons/mask.png" alt="Mask" />
         </button>
         <button id="G" class="grid-item glowing-button">
-          <img src="static/buttons/thumb_up.png" alt="Thumb Up (Good)" />
+          <img src="/static/buttons/thumb_up.png" alt="Thumb Up (Good)" />
         </button>
         <button id="LA" class="grid-item glowing-button">
-          <img src="static/buttons/left_arm.png" alt="Left Arm (LA)" />
+          <img src="/static/buttons/left_arm.png" alt="Left Arm (LA)" />
         </button>
         <button id="H" class="grid-item glowing-button">
-          <img src="static/buttons/help.png" alt="Help (H)" />
+          <img src="/static/buttons/help.png" alt="Help (H)" />
         </button>
         <button id="RA" class="grid-item glowing-button">
-          <img src="static/buttons/right_arm.png" alt="Right Arm (RA)" />
+          <img src="/static/buttons/right_arm.png" alt="Right Arm (RA)" />
         </button>
         <button id="LL" class="grid-item glowing-button">
           <img src="static/buttons/left_leg.png" alt="Left Leg (LL)" />
         </button>
         <button id="P" class="grid-item glowing-button">
-          <img src="static/buttons/pillow.png" alt="Pillow (P)" />
+          <img src="/static/buttons/pillow.png" alt="Pillow (P)" />
         </button>
         <button id="RL" class="grid-item glowing-button">
-          <img src="static/buttons/right_leg.png" alt="Right Leg (RL)" />
+          <img src="/static/buttons/right_leg.png" alt="Right Leg (RL)" />
         </button>
       </div>
     </div>
     <!-- Link js -->
-    <script src="static/script.js"></script>
+    <script src="/static/script.js"></script>
   </body>
 </html>
